--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -6,11 +6,12 @@
 .logo{
     position: relative;
     top:44px;
-    width: 202.81px;
-    height: 60px;
+    width: 152.81px;
+    height: 130px;
     margin-left: auto;
     margin-right: auto;
     display: block;
+    border-radius: 10px;
 }
 .form{
     width: 570px;
