--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,5 +1,5 @@
 .loginPage{
-    background-color:#E5E5E5;
+    background-color:#ABABAB;
     height: 100%;
     
 }
@@ -14,48 +14,60 @@
     border-radius: 10px;
 }
 .form{
-    width: 500px;
-    height: 380px;
-    border:1px solid #ABABAB;
-    box-sizing: border-box;
-    border-radius: 4px;
+    width: 700px;
+    height: 350px;
+    border:3px solid #ABABAB;
+    box-sizing: border-box; 
     margin-left: auto;
     margin-right: auto;
+    padding:1px 80px;
     display: block;
-    margin-top: 100px;
+    margin-top: 80px;
     background-color: #FFFFFF;
+    border-radius: 4px;
 }
 .form:hover{
-    border:1.5px solid #8dee55;
+    border:1.5px solid gray;
+    border-radius: 10px;
 }
 .signInBtn{
-    width: 450px;
-    height: 50px;
-    border-radius:30px;
-    margin-left:auto;
-    margin-right: auto;
-    margin-top: 40px;
+    width: 500px;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 125px 0 3px;
     display: block;
-    border: 1px solid gray;
+    border: 1px solid black;
 }
 .signInBtn:hover{
-    border: 2px solid blue;
-
+    border: 2px solid black;
 }
 .text{
     font-weight: bold;
 }
 p{
     text-align: center;
-    margin-top:25px;
+    margin-top:3px;
 }
 .form-btn{
     background-color: blue;
     margin-left:  150px;
-    padding:7px 60px;
+    margin-bottom: 0;
+    margin-top: 0;
+    padding:5px 60px;
     color:white;
-    border-radius: 5px;
+    
 }
-input{
-    border: 1px solid cyan;
+.form-btn:hover{
+    border: 4px solid blue;
+    border-radius: 3px;
+}
+.headerName{
+    font-weight: bold;
+    margin-top:70px;
+    margin-bottom:0;
+}
+.headerPass{
+    font-weight: bold;
+    margin-top:20px;
+    margin-bottom: 0;
 }
